adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,6 +11,9 @@
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus ullam ex autem, sapiente hic totam asperiores dolorem optio consectetur delectus rem dignissimos numquam quod unde adipisci officia beatae, error quia.
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum sed modi earum alias, deserunt repellat nisi ad porro quas nemo itaque temporibus amet deleniti quos, laudantium minima vitae necessitatibus saepe!
+    </p>
 
 
 </body>
